# crewai-marketing

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/: .wordlist.txt
.github/workflows/: build.yml  linter.yml  update.yml
ci/: update_versions.sh
knowledge/: background.txt
src/marketing/: crew.py
src/marketing/config/: agents.yaml  create_post.yaml
